--- a/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -1,6 +1,6 @@
 [databases]
 {% for pool in pgbouncer_pools %}
-{{ pool.name }} = host=127.0.0.1 port={{ postgresql_port }} dbname={{ pool.dbname }} {{ pool.pool_parameters }}
+{{ pool.name }} = host=127.0.0.1 port={{ postgresql_port }} dbname={{ pool.dbname }} {{ pool.pool_parameters }} auth_user={{pgbouncer_auth_user}}
 {% endfor %}
 
 * = host=127.0.0.1 port={{ postgresql_port }}
@@ -16,6 +16,7 @@ listen_addr = {{ hostvars[inventory_hostname]['inventory_hostname'] }}
 listen_port = {{ pgbouncer_listen_port | default(6432) }}
 unix_socket_dir = /var/run/postgresql
 auth_type = {{ pgbouncer_auth_type }}
+auth_query = SELECT usename, passwd FROM user_search($1)
 auth_file = /etc/pgbouncer/userlist.txt
 admin_users = {{ pgbouncer_admin_users }}
 stats_users = {{ pgbouncer_stats_users }}
